--- a/instagram_web/templates/home.html
+++ b/instagram_web/templates/home.html
@@ -1,9 +1,12 @@
 {% extends "_layout.html" %}
 {% block title %}
-  Homepage
+Homepage
 {% endblock %}
 {% block header %}
 {% endblock %}
 {% block content %}
 <h1>Homepage</h1>
+{% if current_user.is_authenticated %}
+<h1>Welcome back {{current_user.name}}</h1>
+{% endif %}
 {% endblock %}
